# python-function-composition

./: .gitignore  LICENSE  README.md  composable.py  pyproject.toml  requirements.txt  sample.json  shapeEval.py  test_composable.py  test_requirements.txt  test_shapeEval.py
auttcomp/: __init__.py  __main__.py  async_composable.py  async_context.py  composable.py  expressionBuilder.py  extensions.py  parallel_context.py  queryBuilder.py  quicklog.py  shapeEval.py  shape_eval.py  utility.py
auttcomp/Docs/: changelog.txt
auttcomp/testing/: __init__.py  base_test.py  benchmarks.py  benchmarks_composable.py  benchmarks_iterable.py  civitaiSample.py  sample.json  sample.py  testBase.py  test_async.py  test_async_composable.py  test_async_context.py  test_composable.py  test_expressionBuilder.py  test_expression_builder.py  test_extensions.py  test_parallel.py  test_partial_app.py  test_queryBuilder.py  test_shapeEval.py  test_shape_eval.py  test_utility.py
code/: composable.py  extensions.py  quicklog.py  shapeEval.py  testBase.py  test_composable.py  test_extensions.py  test_shapeEval.py  test_utility.py  utility.py
