[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auttcomp"
version = "1.0.1"
authors = [
  { name="Brandon McCartney", email="auttcast@gmail.com" },
]
description = "in-line functional composition"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities"
]
license = "MIT"
license-files = ["LICENSE.txt"]

[project.urls]
Homepage = "https://github.com/Auttcast/python-function-composition"
Issues = "https://github.com/Auttcast/python-function-composition/issues"
